--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home_test"
+        android:id="@+id/navigation_statistics"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Blah" />
+        android:title="@string/title_statistics" />
 
     <item
         android:id="@+id/navigation_home"
@@ -12,8 +12,8 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_history"
+        android:icon="@drawable/ic_history_black_24dp"
+        android:title="@string/title_history" />
 
 </menu>
