--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,11 +21,17 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
+                <include
+                    layout="@layout/information_card"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/material_card_edge_margin"/>
+
 
                 <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/avatar"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_margin="@dimen/material_baseline_grid_2x"
                     android:src="@drawable/default_avatar"
                     app:civ_border_color="@color/colorPrimary"
@@ -38,7 +45,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginEnd="@dimen/material_baseline_grid_5x"
                     android:layout_marginStart="@dimen/material_baseline_grid_5x"
-                    android:text="Player Name: " />
+                    android:text="Select a Username " />
 
                 <TextView
                     android:id="@+id/current_rating"
@@ -50,66 +57,16 @@
                     android:layout_marginStart="@dimen/material_baseline_grid_5x"
                     android:text="Current Rating:" />
 
-                <android.support.v7.widget.CardView
-                    android:id="@+id/information_card"
-                    android:visibility="gone"
+                <include
+                    layout="@layout/overview_card"
+                    android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:layout_margin="@dimen/material_card_edge_margin"
-                    android:animateLayoutChanges="true"
-                    android:padding="@dimen/material_card_edge_margin"
-                    android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom_last_block"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="@dimen/material_card_elevation_resting"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true">
+                    />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:paddingBottom="@dimen/material_card_edge_margin"
-                        android:paddingTop="@dimen/material_card_edge_margin">
-
-
-                        <TextView
-                            style="@style/MaterialTypography.Dense.Title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingBottom="@dimen/material_card_title_block_large_padding_bottom"
-                            android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
-                            android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
-                            android:paddingTop="@dimen/material_baseline_grid_1x"
-                            android:text="Information" />
-
-                        <TextView
-                            style="@style/TextAppearance.AppCompat.Body1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingEnd="@dimen/material_card_supporting_text_padding_horizontal"
-                            android:paddingStart="@dimen/material_card_supporting_text_padding_horizontal"
-                            android:text="@string/lorem_paragraph" />
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/material_baseline_grid_6x">
-
-                            <android.support.v7.widget.AppCompatButton
-                                android:id="@+id/exploreButton"
-                                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentBottom="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentTop="true"
-                                android:text="Got It" />
-                        </RelativeLayout>
-
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
+                <android.support.v4.widget.Space
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/material_baseline_grid_20x" />
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
