--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,7 @@
 
 
             <LinearLayout
+                android:id="@+id/root"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
@@ -25,44 +26,62 @@
                     layout="@layout/information_card"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/material_card_edge_margin"/>
+                    android:layout_margin="@dimen/material_card_edge_margin" />
 
-
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/avatar"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="@dimen/material_baseline_grid_2x"
-                    android:src="@drawable/default_avatar"
-                    app:civ_border_color="@color/colorPrimary"
-                    app:civ_border_width="4dp" />
-
-                <TextView
-                    android:id="@+id/profile_name"
-                    style="@style/TextAppearance.AppCompat.Headline"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_5x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_5x"
-                    android:text="Select a Username " />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/current_rating"
-                    style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_5x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_5x"
-                    android:text="Current Rating:" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/avatar"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="@dimen/material_baseline_grid_2x"
+                        android:layout_marginStart="@dimen/material_baseline_grid_4x"
+                        android:src="@drawable/default_avatar"
+                        app:civ_border_color="@color/colorPrimary"
+                        app:civ_border_width="4dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/material_baseline_grid_2x"
+                        android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+
+                        <TextView
+                            android:id="@+id/profile_name"
+                            style="@style/TextAppearance.AppCompat.Headline"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
+                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                            android:text="Select a Username " />
+
+                        <TextView
+                            android:id="@+id/current_rating"
+                            style="@style/TextAppearance.AppCompat.Subhead"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
+                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                            android:text="Current Rating:" />
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <include
                     layout="@layout/overview_card"
-                    android:layout_height="match_parent"
+                    android:id="@+id/overview_card"
                     android:layout_width="match_parent"
-                    android:layout_margin="@dimen/material_card_edge_margin"
-                    />
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/material_card_edge_margin" />
 
                 <android.support.v4.widget.Space
                     android:layout_width="match_parent"
