--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/AppTheme">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/material_baseline_grid_1x"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/AppTheme">
+            android:background="?attr/colorPrimary">
 
             <com.lapism.searchview.SearchView
                 android:id="@+id/searchView"
@@ -30,7 +30,7 @@
             android:layout_below="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <com.luseen.luseenbottomnavigation.BottomNavigation.BottomNavigationView
             android:id="@+id/navigation"
