--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,24 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/home_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/AppTheme">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/main.collapsing"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll">
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatar"
+            android:layout_width="126dp"
+            android:layout_height="126dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
+            android:src="@drawable/default_avatar"
+            app:civ_border_color="?android:colorBackground"
+            app:civ_border_width="4dp"
+            app:layout_collapseMode="parallax"
+            app:layout_scrollFlags="scroll" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+            android:layout_marginStart="@dimen/material_baseline_grid_2x"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
+            android:background="@color/divider"
+            app:layout_scrollFlags="scroll" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+            android:layout_marginTop="@dimen/material_baseline_grid_1x"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/profile_name"
+                    style="@style/TextAppearance.AppCompat.Headline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_0.5x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                    android:padding="@dimen/material_baseline_grid_1x"
+                    android:layout_centerInParent="true"
+                    android:text="Select a Username "
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    app:layout_collapseMode="pin" />
+
+                <com.mikepenz.iconics.view.IconicsImageView
+                    android:id="@+id/default_user_status_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/profile_name" />
+
+            </RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/current_rating"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/material_baseline_grid_1x"
+                android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                android:gravity="center"
+                android:text="Rating: "
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/current_rank"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/material_baseline_grid_1x"
+                android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                android:gravity="center"
+                android:text="Rank: "
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/current_KD"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/material_baseline_grid_1x"
+                android:layout_marginStart="@dimen/material_baseline_grid_1x"
+                android:gravity="center"
+                android:text="K/D: "
+                android:visibility="invisible" />
+
+        </LinearLayout>
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
                 android:id="@+id/root"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
@@ -28,77 +142,16 @@
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/material_card_edge_margin" />
 
-                <LinearLayout
+                <include
+                    android:id="@+id/overview_card"
+                    layout="@layout/playlist_overview_card"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center">
-
-
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/avatar"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_margin="@dimen/material_baseline_grid_2x"
-                        android:layout_marginStart="@dimen/material_baseline_grid_4x"
-                        android:src="@drawable/default_avatar"
-                        app:civ_border_color="@color/colorPrimary"
-                        app:civ_border_width="4dp" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/material_baseline_grid_2x"
-                        android:layout_marginBottom="@dimen/material_baseline_grid_2x"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-
-                        <TextView
-                            android:id="@+id/profile_name"
-                            style="@style/TextAppearance.AppCompat.Headline"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
-                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
-                            android:textStyle="bold"
-                            android:text="Select a Username " />
-
-                        <TextView
-                            android:id="@+id/current_rating"
-                            style="@style/TextAppearance.AppCompat.Caption"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
-                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
-                            android:text="Rating: " />
-                        <TextView
-                            android:id="@+id/current_rank"
-                            style="@style/TextAppearance.AppCompat.Caption"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
-                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
-                            android:text="Rank: " />
-                        <TextView
-                            android:id="@+id/current_KD"
-                            style="@style/TextAppearance.AppCompat.Caption"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginEnd="@dimen/material_baseline_grid_1x"
-                            android:layout_marginStart="@dimen/material_baseline_grid_1x"
-                            android:text="K/D: " />
-                    </LinearLayout>
-
-                </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/material_card_edge_margin" />
 
                 <include
-                    layout="@layout/overview_card"
-                    android:id="@+id/overview_card"
+                    android:id="@+id/last_match_card"
+                    layout="@layout/last_match_card"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/material_card_edge_margin" />
