--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="primary_light">#B2DFDB</color>
-    <color name="colorAccent">#FFC107</color>
+    <color name="colorAccent">#F19C00</color>
+    <color name="colorAccentAlt">#EB0011</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
