--- a/app/src/main/res/layout/match_layout.xml
+++ b/app/src/main/res/layout/match_layout.xml
@@ -33,7 +33,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/match_overview_season_playlist"
+            android:id="@+id/match_overview_date"
             style="@style/MaterialTypography.Tall.Caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".5"
+            android:layout_weight=".33"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -68,11 +68,11 @@
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
-                android:text="RATING"
+                android:text="RESULT"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/match_rating"
+                android:id="@+id/match_result"
                 style="@style/MaterialTypography.Dense.Subheading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -81,19 +81,13 @@
                 android:text="- -"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/match_rating_rank"
-                style="@style/MaterialTypography.Regular.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/material_baseline_grid_1x"
-                android:paddingStart="@dimen/material_baseline_grid_1x" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".5"
+            android:layout_weight=".33"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -109,11 +103,11 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/material_baseline_grid_1x"
                     android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="WIN %"
+                    android:text="RATING"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/match_win_rate"
+                    android:id="@+id/match_rating"
                     style="@style/MaterialTypography.Dense.Subheading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -122,15 +116,46 @@
                     android:text="- -"
                     android:textStyle="bold" />
 
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".33"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <TextView
-                    android:id="@+id/match_win_rate_ranking"
-                    style="@style/MaterialTypography.Regular.Body1"
+                    style="@style/MaterialTypography.Dense.Caption"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x" />
+                    android:paddingStart="@dimen/material_baseline_grid_1x"
+                    android:text="KILLS"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/match_kills"
+                    style="@style/MaterialTypography.Dense.Subheading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="@dimen/material_baseline_grid_1x"
+                    android:paddingStart="@dimen/material_baseline_grid_1x"
+                    android:text="- -"
+                    android:textStyle="bold" />
+
+
             </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -159,11 +184,11 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/material_baseline_grid_1x"
                     android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="TOP 10 RATE"
+                    android:text="DAMAGE"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/match_top_ten_rate"
+                    android:id="@+id/match_damage"
                     style="@style/MaterialTypography.Dense.Subheading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -172,15 +197,45 @@
                     android:text="- -"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/match_top_ten_ranking"
-                    style="@style/MaterialTypography.Regular.Body1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x" />
+
             </LinearLayout>
         </LinearLayout>
+
+        <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".5"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/MaterialTypography.Dense.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="DISTANCE"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/match_distance"
+                style="@style/MaterialTypography.Dense.Subheading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="- -"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -201,11 +256,11 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="@dimen/material_baseline_grid_1x"
                     android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="K/D RATIO"
+                    android:text="SURVIVED"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/match_KD_rate"
+                    android:id="@+id/match_survived"
                     style="@style/MaterialTypography.Dense.Subheading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -214,14 +269,9 @@
                     android:text="- -"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/match_KD_ranking"
-                    style="@style/MaterialTypography.Regular.Body1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x" />
+
             </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
