--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -16,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:emptyLayout="@layout/empty_layout"
-            app:emptyText="No User Selected"
             app:state="empty"
             app:stateTextAppearance="@style/TextAppearance.AppCompat">
 
@@ -30,79 +29,97 @@
         </cz.kinst.jakub.view.SimpleStatefulLayout>
 
 
-            <LinearLayout
-                android:id="@+id/sorting_view"
+        <LinearLayout
+            android:id="@+id/sorting_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/material_color_blue_500"
+            android:orientation="vertical"
+            android:visibility="invisible">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                android:text="Season"
+                android:textStyle="bold" />
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/season_picker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/material_color_blue_500"
-                android:orientation="vertical"
-                android:visibility="invisible">
+                android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                android:hint="Select a Season" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
-                    android:text="Season"
-                    android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                android:text="Mode"
+                android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/season_picker"
-                    android:layout_width="match_parent"
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/mode_picker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                android:hint="Select a Mode" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                android:text="Region"
+                android:textStyle="bold" />
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/region_picker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                android:hint="Select a Region" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/history_sort_reset"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight=".5"
                     android:layout_marginBottom="@dimen/material_baseline_grid_1x"
                     android:layout_marginEnd="@dimen/material_baseline_grid_2x"
                     android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                    android:hint="Select a Season" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
-                    android:text="Mode"
-                    android:textStyle="bold" />
-
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/mode_picker"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                    android:hint="Select a Mode" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
-                    android:text="Region"
-                    android:textStyle="bold" />
-
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/region_picker"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
-                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
-                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
-                    android:hint="Select a Region" />
+                    app:theme="@style/HistoryButtonPrimary"
+                    android:text="Reset" />
 
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/history_sort_submit"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary"
+                    android:layout_weight=".5"
                     android:layout_marginBottom="@dimen/material_baseline_grid_1x"
                     android:layout_marginEnd="@dimen/material_baseline_grid_2x"
                     android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    app:theme="@style/HistoryButtonSecondary"
                     android:text="Submit" />
-
             </LinearLayout>
+
+        </LinearLayout>
 
     </FrameLayout>
 
