--- a/app/src/main/res/layout/last_match_card.xml
+++ b/app/src/main/res/layout/last_match_card.xml
@@ -102,6 +102,13 @@
             </LinearLayout>
         </LinearLayout>
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+            android:layout_marginStart="@dimen/material_baseline_grid_2x"
+            android:background="@color/divider" />
+
         <!--Second Header-->
         <me.calebjones.pubgtrackerforandroid.ui.views.MatchView
             android:id="@+id/match_view"
