--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/material_baseline_grid_1x"
+            app:elevation="0dp"
             android:background="?attr/colorPrimary">
 
             <com.lapism.searchview.SearchView
