--- a/app/src/main/res/layout/match_layout.xml
+++ b/app/src/main/res/layout/match_layout.xml
@@ -3,8 +3,6 @@
     android:id="@+id/match_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/material_card_title_block_padding_horizontal"
-    android:paddingBottom="@dimen/material_card_title_block_padding_horizontal"
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,7 +15,7 @@
         android:paddingBottom="@dimen/material_baseline_grid_1x"
         android:paddingEnd="@dimen/material_card_title_block_padding_horizontal"
         android:paddingStart="@dimen/material_card_title_block_padding_horizontal"
-        android:paddingTop="@dimen/material_baseline_grid_0.5x">
+        android:paddingTop="@dimen/material_baseline_grid_1x">
 
         <TextView
             android:id="@+id/match_overview_match_title"
